--- a/Training.ipynb
+++ b/Training.ipynb
@@ -18,11 +18,11 @@
       "metadata": {
         "id": "OkVmSYSLWdm2",
         "colab_type": "code",
-        "outputId": "85d4d6c5-3a00-4b4a-cbb1-e9ef3543a4d7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "fbc73f25-4c30-47f3-aa0b-277d2762a0d0"
       },
       "source": [
         "'''!pip install tensorflow\n",
@@ -30,7 +30,7 @@
         "!pip install bert-for-tf2\n",
         "!pip install sentencepiece'''"
       ],
-      "execution_count": 281,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -42,7 +42,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 281
+          "execution_count": 54
         }
       ]
     },
@@ -51,11 +51,11 @@
       "metadata": {
         "id": "SbtC2O89XiMR",
         "colab_type": "code",
-        "outputId": "a12dfc0f-7570-42ad-ff73-f84fc457035b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        }
+        },
+        "outputId": "7aab53f2-23f8-4b66-d8e0-cf04b7de45b8"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -63,7 +63,7 @@
         "print(\"TF version: \", tf.__version__)\n",
         "print(\"Hub version: \", hub.__version__)"
       ],
-      "execution_count": 282,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,22 +98,38 @@
       "metadata": {
         "id": "5PnvCRBOZsuR",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8800a5a6-f970-4418-b855-783dfbacbfed"
       },
       "source": [
         "checkpoint_path = 'model.ckpt'\n",
         "\n",
         "max_seq_length = 128  # Your choice here.\n",
         "epochs = 1\n",
-        "regEx = \"[A-Z]+\\s[a-zA-Z1-9]+\"\n",
+        "textRegEx = \"[a-zA-Z1-9!?@:&\\+{}\\[\\]\\.@,\\$/\\\"-]+\"\n",
+        "tagRegEx = \"[A-Z-]+\"\n",
+        "regEx = tagRegEx+\"\\s\"+textRegEx\n",
+        "print(regEx)\n",
+        "# \"$+.[]\n",
         "nextId = 0\n",
         "maxVal = 1000\n",
         "minVal = -1\n",
         "bertOutDim = 768\n",
         "totalTags = 45\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[A-Z-]+\\s[a-zA-Z1-9!?@:&\\+{}\\[\\]\\.@,\\$/\"-]+\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -159,7 +175,13 @@
         "\n",
         "    model = Model(inputs=[input_word_ids, input_mask, segment_ids], outputs=[pooled_output, sequence_output])\n",
         "\n",
-        "    return model"
+        "    # Import tokenizer using the original vocab file\n",
+        "    vocab_file = bert_layer.resolved_object.vocab_file.asset_path.numpy()\n",
+        "    do_lower_case = bert_layer.resolved_object.do_lower_case.numpy()\n",
+        "    FullTokenizer = bert.bert_tokenization.FullTokenizer\n",
+        "    tokenizer = FullTokenizer(vocab_file, do_lower_case)\n",
+        "\n",
+        "    return {'model':model,'tokenizer':tokenizer}"
       ],
       "execution_count": 0,
       "outputs": []
@@ -197,25 +219,6 @@
         "    token_ids = tokenizer.convert_tokens_to_ids(tokens)\n",
         "    input_ids = token_ids + [0] * (max_seq_length-len(token_ids))\n",
         "    return input_ids"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1hjsi_Ywagzv",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def getTokenizer():\n",
-        "    # Import tokenizer using the original vocab file\n",
-        "    vocab_file = bert_layer.resolved_object.vocab_file.asset_path.numpy()\n",
-        "    do_lower_case = bert_layer.resolved_object.do_lower_case.numpy()\n",
-        "    FullTokenizer = bert.bert_tokenization.FullTokenizer\n",
-        "    tokenizer = FullTokenizer(vocab_file, do_lower_case)\n",
-        "    return tokenizer"
       ],
       "execution_count": 0,
       "outputs": []
@@ -444,7 +447,7 @@
         "    length = len(sentence.split())\n",
         "    mat = [[0 for i in range(length)] for i in range(length)]\n",
         "    generateTree(tree,mat)\n",
-        "    #print(sentence)\n",
+        "    #print(mat)\n",
         "    embs = getEmbeddings(model,tokenizer,sentence)\n",
         "\n",
         "    trainX = np.asarray([])\n",
@@ -515,8 +518,9 @@
         "colab": {}
       },
       "source": [
-        "model  = getBERTModel()\n",
-        "tokenizer = getTokenizer()"
+        "outModel = getBERTModel()\n",
+        "model = outModel['model']\n",
+        "tokenizer = outModel['tokenizer']"
       ],
       "execution_count": 0,
       "outputs": []
@@ -531,7 +535,7 @@
       "source": [
         "nSentence = [\"short cuts make long delays\",\"short cuts make long delays\"]\n",
         "nTree = ['(S (NP (JJ short)(NNS cuts))(VP (VBP make)(NP (JJ long)(NNS delays))))',\n",
-        "         '(S (NP (JJ short)(NNS cuts))(VP (VBP make)(NP (JJ long)(NNS delays))))'\n",
+        "         '(S (NP (A-C short)(NNS cuts))(VP (VBP make)(NP (JJ long)(NNS delays))))'\n",
         "         ]"
       ],
       "execution_count": 0,
@@ -542,18 +546,18 @@
       "metadata": {
         "id": "JcLT4C30c2po",
         "colab_type": "code",
-        "outputId": "68d1e134-4c49-4e83-aaf6-ba8838bfec9a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        }
+        },
+        "outputId": "0a65ce6b-32ef-4884-afad-a5cb644261c0"
       },
       "source": [
         "trainX,trainY = getTrainingData(model,tokenizer,nSentence,nTree)\n",
         "print(trainX.shape)\n",
         "print(trainY.shape)"
       ],
-      "execution_count": 304,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
@@ -587,14 +591,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 102
         },
-        "outputId": "e5fa7dd0-8b21-4a3e-fbbb-4e539f6e032e"
+        "outputId": "974b64de-e31c-48c0-92a3-ae589321d2a6"
       },
       "source": [
         "model = createModel()\n",
         "cp_callback = tf.keras.callbacks.ModelCheckpoint(filepath=checkpoint_path,save_weights_only=True,verbose=1)\n",
         "model.fit(trainX,trainY,epochs=epochs,callbacks=[cp_callback])"
       ],
-      "execution_count": 306,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "stream",
@@ -602,7 +606,7 @@
             "Train on 20 samples\n",
             "\n",
             "Epoch 00001: saving model to model.ckpt\n",
-            "20/20 [==============================] - 0s 16ms/sample - loss: 6.3091\n"
+            "20/20 [==============================] - 0s 16ms/sample - loss: 6.2750\n"
           ],
           "name": "stdout"
         },
@@ -610,13 +614,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7f6e07a88160>"
+              "<tensorflow.python.keras.callbacks.History at 0x7fd01669c128>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 306
+          "execution_count": 78
         }
       ]
     },
@@ -629,13 +633,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "2556d0bb-d9a2-43ee-8fce-83578ac6296c"
+        "outputId": "6907c17b-de90-4462-b7bc-e6a9c6f7d743"
       },
       "source": [
         "'''model = createModel()\n",
         "model.load_weights(checkpoint_path)'''"
       ],
-      "execution_count": 307,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -647,7 +651,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 307
+          "execution_count": 79
         }
       ]
     }
